增加gird布局实现垂直水平居中

--- a/基础知识/垂直水平居中.md
+++ b/基础知识/垂直水平居中.md
@@ -86,3 +86,15 @@
 .child {
 }
 ```
+
+### 方法四：gird(兼容性不好，不推荐)
+
+```css
+.parent {
+    display: grid;
+}
+.child {
+    align-self: center;
+    justify-self: center;
+}
+```
