add selectionsort & insertionSort

--- a/算法案例/常用排序算法.md
+++ b/算法案例/常用排序算法.md
@@ -21,10 +21,48 @@ var arr = [3, 44, 38, 5, 47, 15, 36, 26, 27, 2, 46, 4, 19, 50, 48];
 
 console.log(bubbleSort(arr))
 ```
+![bubbleSort](http://img.blog.csdn.net/20160916160748389)
 
-## 快速排序
+## 选择排序
 
-
+```js
+function selectionSort(arr) {
+    var len = arr.length;
+    for (var i = 0; i < len - 1; i++) {
+        var minIndex = i;
+        for (var j = i + 1; j < len; j++) {
+            if (arr[j] < arr[minIndex]) {     //寻找最小的数
+                minIndex = j;                 //将最小数的索引保存
+            }
+        }
+        var temp = arr[i];
+        arr[i] = arr[minIndex];
+        arr[minIndex] = temp;
+    }
+    return arr;
+}
+var arr = [3, 44, 38, 5, 47, 15, 36, 26, 27, 2, 46, 4, 19, 50, 48];
+console.log(selectionSort(arr))
 ```
-TODO
+![selectionSort](http://img.blog.csdn.net/20160916164754013)
+
+## 插入排序
+
+```js
+function insertionSort(arr) {
+    let leg = arr.length;
+    for (var i = 1; i < leg; i++) {
+        var key = arr[i];
+        var j = i - 1;
+        while (j >= 0 && arr[j] > key) {
+            arr[j + 1] = arr[j];
+            j--;
+        }
+        arr[j + 1] = key;
+    }
+    return arr;
+}
+
+var arr = [3, 44, 38, 5, 47, 15, 36, 26, 27, 2, 46, 4, 19, 50, 48];
+console.log(insertionSort(arr))
 ```
